src/App.css
/* ... */
.technology .main{
  display: flex;
  padding-top: clamp(2em, 3vh, 5em);
  justify-content: space-between;
  flex: 1;
  gap: 3em;
}

.technology .main > *:first-child {
  gap: 2em;
  align-items: center;
}

.technology .main > *:first-child  p{
  max-width: 45ch;
}

.technology .main > *:last-child  img, 
.technologyLoaderBg{
  width: auto;
  height: clamp(40vh, 40vw, 60vh);
}


@media (max-width: 55rem) {
  .technology{
    background-image: url("./assets/technology/background-technology-tablet.jpg");
  }

  .technology main {
    padding-left: 0;
    padding-bottom: 10vh;
  }  

  .technology .main{
    flex-direction: column-reverse;
    text-align: center;
  }

  .technology .main > *:first-child {
    flex-direction: column;
  }  

  .technology .main > *:first-child [role = "tabpanel"] > * + * {
    margin-top: 0.2em;
  }  

  .technology .main > *:first-child  p{
    max-width: 50ch;
  }  

  .technology .main > *:last-child  img,
  .technologyLoaderBg{
    width: 100%;
    height: auto;
  }  

}

@media (max-width: 35rem) {
  .technology{
    background-image: url("./assets/technology/background-technology-mobile.jpg");
  }

  .technology main {
    text-align: center;
    padding-top: 0;
    padding-bottom: 5vh;
  }  

  .technology .main > *:first-child {
    padding-inline: 2em;
  }  
}



/*--------------------*/
/* Animations         */
/*--------------------*/

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

/* Loader */
.lds-facebook {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
  animation: fadein 500ms linear;
}
.lds-facebook div {
  display: inline-block;
  position: absolute;
  left: 8px;
  width: 16px;
  background: #fff;
  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
}
.lds-facebook div:nth-child(1) {
  left: 8px;
  animation-delay: -0.24s;
}
.lds-facebook div:nth-child(2) {
  left: 32px;
  animation-delay: -0.12s;
}
.lds-facebook div:nth-child(3) {
  left: 56px;
  animation-delay: 0;
}
@keyframes lds-facebook {
  0% {
    top: 8px;
    height: 64px;
  }
  50%, 100% {
    top: 24px;
    height: 32px;
  }
}

